Task 1: Add drop-down menu and fetch user info

--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="utf-8">
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Slab&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="res/css/style.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script type="text/javascript" src="res/js/script.js"></script>
     <title>postIt! Just Post It</title>
   </head>
   <body>
@@ -17,6 +19,14 @@
         </div>
         <div class="avatar-container">
           <img src="res/images/avatar.png" class="avatar" alt="Me">
+          <div class="avatar-submenu">
+            <ul class="avatar-submenu-list">
+              <li id="name"></li>
+              <li id="email"></li>
+              <li><a id="browse" href="browse.html" >Browse</a></li>
+              <li><a id="logout" href="login.html" >Log Out</a></li>
+            </ul>
+          </div>
         </div>
       </nav>
     </header>
